--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@ionic-native/camera": "3.13.0",
-    "@ionic-native/core": "3.12.1",
+    "@ionic-native/core": "4.4.0",
     "@ionic-native/document-viewer": "^4.3.2",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
@@ -35,7 +35,7 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.1",
-    "ionic-angular": "3.6.0",
+    "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "ng2-pdf-viewer": "^2.0.3",
@@ -44,7 +44,7 @@
     "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "2.1.3",
+    "@ionic/app-scripts": "^3.1.2",
     "typescript": "2.3.4"
   },
   "description": "Client Engagement App",
