--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/camera": "3.13.0",
-    "@ionic-native/core": "4.4.0",
+    "@ionic-native/camera": "4.5.3",
+    "@ionic-native/core": "4.5.3",
     "@ionic-native/document-viewer": "^4.3.2",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
+    "@ionic-native/splash-screen": "^4.3.2",
+    "@ionic-native/status-bar": "^4.3.2",
     "@ionic/storage": "2.0.1",
     "angular2-text-mask": "^8.0.4",
     "cordova-android": "^6.2.3",
